[package]
name = "deno_mdns"
version = "0.0.1"
authors = ["David Lemarier <david@lemarier.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.45.0"
mdns = "1.1.0"
futures-util = "0.3.5"
futures = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
